# cpuqt

./: .directory  .gitignore  .gitmodules  CMakeLists.txt  Logger.cpp  Logger.h  MainWindow.h  README.md  about_box.ui  banner.txt  cpuqt2.cpp  cpuqt2.h  cpuqt2.kdev4  main.cpp  main_window.cpp  main_window.h  main_window.ui  untitled.ui  untitled2.ui
.github/workflows/: cmake.yml  codeql-analysis.yml
Z80/: BadgerMemory.cpp  BadgerMemory.h  BaseInstructionDecoder.cpp  BaseInstructionDecoder.h  BaseProcessor.cpp  BaseProcessor.h  CMakeLists.txt  Condition.cpp  Condition.hpp  DisassemblerProcessor.cpp  DisassemblerProcessor.h  DisassemblyResult.cpp  DisassemblyResult.h  EmulationProcessor.cpp  EmulationProcessor.h  IO.cpp  IO.h  InstructionDecoder.cpp  InstructionDecoder.h  InstructionDecoderGenerated.cpp  InstructionDecoderGenerated.h  InstructionDecoderGeneratedOrig.cpp.old  Memory.cpp  Memory.h  MemoryAddress.cpp  MemoryAddress.h  Processor.cpp  Processor.h  Register.cpp  Register.hpp  RegisterPair.cpp  RegisterPair.hpp  TestIO.cpp  TestIO.h  alu.h  badgerio.cpp  badgerio.h  baseprocessordecoder.cpp  baseprocessordecoder.h  decoder.cpp  (+13 more)
bin_z80/: arse.asm  arse.rom  cpm_io.asm  cpm_io.rom  edtest.z80  mm.z80  most_common.txt  output.txt  test.asm  test.z80  zexdoc.z80
computer/: badgerio.cpp  badgerio.h  consolebadgerio.cpp  consolebadgerio.h  logger.cpp  logger.h  utils.cpp  utils.h
computer/cpm/: badgerio.cpp  badgerio.h  console_serial_io.cpp  console_serial_io.h  serial_io.cpp  serial_io.h
computer/spectrum/: computer.cpp  computer.h  graphics.h  spectrumio.cpp  spectrumio.h
scripting/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  luascript.lua  sampleluahost.cpp  scripting
scripts/: manic.lua  rogue maths.lua
sdlui/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  Test.cpp  catch.cpp  catch.hpp  computer_utils_test.cpp  graphics_test.cpp  main.cpp  test.cpp  test_computer.cpp  test_computer.h  zexrunner.cpp  zexrunner.h
tests/mocks/: TestIO.cpp  TestIO.h  test_computer.cpp  test_computer.h  test_io.cpp  test_io.h  zexrunner_computer.cpp  zexrunner_computer.h
tools/: CMakeLists.txt  Case.cpp  Case.hpp  FinalNode.cpp  FinalNode.hpp  GetData.cpp  GetData.hpp  Instruction.cpp  Instruction.hpp  InstructionTableToCode-main.cpp  InstructionTableToCode.cpp  InstructionTableToCode.hpp  Switch.cpp  Switch.hpp  Test.cpp  cpu-codegen.cpp  z80sean.txt
ui/: CMakeLists.txt  DisassemblyModel.cpp  DisassemblyModel.h  about_box.cpp  about_box.h  about_box.ui  app.qrc  badgercomputer.cpp  badgercomputer.h  badgerio.cpp  badgerio.h  config.ui  cpm_io.cpp  cpm_io.h  keypresseater.cpp  keypresseater.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  qdebugstream.h  qtbadgerio.cpp  qtbadgerio.h  qtbadgermemory.cpp  qtbadgermemory.h  settings.cpp  settings.h  utils.cpp  utils.h
ui/resources/: app.qrc
ui/scripting/: moc_script_host.cpp_parameters  script_host.cpp  script_host.h
